// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layouts/Flexible Column One Columns Layout 1`] = `
<div
  dir="ltr"
>
  

  <div
    style="max-width: 600px"
  >
    
    
    <div
      class="fd-flexible-column-layout"
    >
      
        
      <div
        class="fd-flexible-column-layout__column fd-flexible-column-layout__column--hidden"
        style="width: 0"
      >
        
            
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--tall docs-layout-grid-bg--color-9"
        />
        
        
      </div>
      
        
      <div
        class="fd-flexible-column-layout__separator"
      >
        
            
        <button
          aria-label="Expand"
          class="fd-button fd-button--compact fd-button--transparent fd-flexible-column-layout__button"
        >
          
                
          <i
            class="sap-icon--slim-arrow-right"
            role="presentation"
          />
          
            
        </button>
        
        
      </div>
      
        
      <div
        class="fd-flexible-column-layout__column"
        style="width: 100%"
      >
        
            
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--tall docs-layout-grid-bg--color-8"
        />
        
        
      </div>
      
        
      <div
        class="fd-flexible-column-layout__separator"
      >
        
            
        <button
          aria-label="Expand"
          class="fd-button fd-button--compact fd-button--transparent fd-flexible-column-layout__button"
        >
          
                
          <i
            class="sap-icon--slim-arrow-left"
            role="presentation"
          />
          
            
        </button>
        
        
      </div>
      
        
      <div
        class="fd-flexible-column-layout__column fd-flexible-column-layout__column--hidden"
        style="width: 0"
      >
        
            
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--tall docs-layout-grid-bg--color-7"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
</div>
`;

exports[`Storyshots Layouts/Flexible Column Three Columns Layout 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="fd-flexible-column-layout"
  >
    
    
    <div
      class="fd-flexible-column-layout__column"
      style="width: 25%"
    >
      
            
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--tall docs-layout-grid-bg--color-7"
      />
      
    
    </div>
    
    
    <div
      class="fd-flexible-column-layout__separator"
    >
      
        
      <button
        aria-label="Expand"
        class="fd-button fd-button--compact fd-button--transparent fd-flexible-column-layout__button"
      >
        
            
        <i
          class="sap-icon--slim-arrow-right"
          role="presentation"
        />
        
        
      </button>
      
    
    </div>
    
    
    <div
      class="fd-flexible-column-layout__column"
      style="width: 50%"
    >
      
            
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--tall docs-layout-grid-bg--color-8"
      />
      
    
    </div>
    
    
    <div
      class="fd-flexible-column-layout__separator"
    >
      
        
      <button
        aria-label="Expand"
        class="fd-button fd-button--compact fd-button--transparent fd-flexible-column-layout__button"
      >
        
            
        <i
          class="sap-icon--slim-arrow-left"
          role="presentation"
        />
        
        
      </button>
      
    
    </div>
    
    
    <div
      class="fd-flexible-column-layout__column"
      style="width: 25%"
    >
      
            
      <div
        class="docs-layout-grid-bg docs-layout-grid-bg--tall docs-layout-grid-bg--color-9"
      />
      
    
    </div>
    

  </div>
</div>
`;

exports[`Storyshots Layouts/Flexible Column Two Columns Layout 1`] = `
<div
  dir="ltr"
>
  

  <div
    style="max-width: 1200px"
  >
    
    
    <div
      class="fd-flexible-column-layout"
    >
      
        
      <div
        class="fd-flexible-column-layout__column"
        style="width: 33%"
      >
        
            
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--tall docs-layout-grid-bg--color-9"
        />
        
        
      </div>
      
        
      <div
        class="fd-flexible-column-layout__separator"
      >
        
            
        <button
          aria-label="Expand"
          class="fd-button fd-button--compact fd-button--transparent fd-flexible-column-layout__button"
        >
          
                
          <i
            class="sap-icon--slim-arrow-right"
            role="presentation"
          />
          
            
        </button>
        
        
      </div>
      
        
      <div
        class="fd-flexible-column-layout__column"
        style="width: 67%"
      >
        
            
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--tall docs-layout-grid-bg--color-8"
        />
        
        
      </div>
      
        
      <div
        class="fd-flexible-column-layout__separator"
      >
        
            
        <button
          aria-label="Expand"
          class="fd-button fd-button--compact fd-button--transparent fd-flexible-column-layout__button"
        >
          
                
          <i
            class="sap-icon--slim-arrow-left"
            role="presentation"
          />
          
            
        </button>
        
        
      </div>
      
        
      <div
        class="fd-flexible-column-layout__column fd-flexible-column-layout__column--hidden"
        style="width: 0"
      >
        
            
        <div
          class="docs-layout-grid-bg docs-layout-grid-bg--tall docs-layout-grid-bg--color-7"
        />
        
        
      </div>
      
    
    </div>
    

  </div>
</div>
`;
